constrain width of model-selection and model-params-config to prevent overflow

--- a/amp_llm_v3/webapp/static/style-base.css
+++ b/amp_llm_v3/webapp/static/style-base.css
@@ -1195,6 +1195,14 @@ header p {
     position: relative;
     z-index: 1;
     margin: 20px 0;
+    width: fit-content;
+    max-width: 70%;
+}
+
+/* Model parameters config panel */
+.model-params-config {
+    width: fit-content;
+    max-width: 70%;
 }
 
 .model-button {
